# snake-rivals-arena

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  QUICK_DEPLOY.md  README.md  RENDER_DEPLOYMENT.md  deployment.md  desc  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml
.agent/workflows/: connect_to_remote_db.md  restart_with_remote_db.md
.github/workflows/: ci_cd.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  check_dad_user.py  check_repro_db.py  migrate_gamemode.py  postgres.ipynb  postgres_connect.ipynb  pyproject.toml  repro_issue.py  test.db  test2.db
backend/.ipynb_checkpoints/: postgres-checkpoint.ipynb
backend/alembic/: env.py
backend/alembic/versions/: 0a71ebf7c79b_add_user_id_fks.py  29135b194718_remove_sessions_table.py  c2051c700958_initial_migration.py
backend/app/: create_user.py  db.py  init_groups.py  main.py  models.py  seed.py  seed_test_data.py  sql_models.py  verify_db.py
backend/app/migrations/: allow_duplicate_usernames_emails.py
backend/app/routers/: auth.py  leaderboard.py  sessions.py
backend/tests/: test_api.py  test_models.py
backend/tests_integration/: conftest.py  test_group_uniqueness.py  test_integration.py
docs/: ER_DIAGRAM.mmd  SYSTEM_ARCHITECTURE.mmd
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
notebooks/: postgres.ipynb  postgres_connect.ipynb
src/components/: LoginModal.tsx
src/utils/: aiPlayer.ts  (+1 more)
tests_integration/: test_groups_flow.py
(+37 files in other folders)
